<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_audio_common_lib</name>
  <version>1.0.3</version>
  <description>qrb audio common lib package</description>
  <maintainer email="ronghuiz@qti.qualcomm.com">Ronghui Zhu</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>libpulse-dev</depend>
  <depend>libsndfile1-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
